feat(msw): wire into real API via PGlite
Replace static MSW handlers with Express passthrough backed by PGlite
(PostgreSQL 17.4 via WASM) and an enhanced Redis mock. This gives true
behavior parity in client and api-client test suites.

- Phase 0: Add test-only override seams in postgres.ts, redis client,
  and redisPubSub.ts
- Phase 1: Create packages/api-test-utils with PGlite pool adapter,
  Redis mock, test context factory, and seed helpers
- Phase 2: Add MSW Express passthrough handlers using bypass()
- Phase 3: Wire client and api-client test setups to use real API
- Phase 4: Update all 11 MSW test files (92 tests) to work with
  real Express API instead of static mock handlers

--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -99,6 +99,7 @@
     "sonner": "2.0.7"
   },
   "devDependencies": {
+    "@tearleads/api-test-utils": "workspace:*",
     "@capacitor/android": "8.1.0",
     "@capacitor/cli": "8.1.0",
     "@capacitor/ios": "8.1.0",
