feat(bob-and-alice): add API scenario harness
Add ApiScenarioHarness backed by PGlite + Redis mock for
end-to-end API route testing without MSW. Includes tests
for auth flows, VFS lifecycle, org-shares, and AI usage.

--- a/packages/bob-and-alice/package.json
+++ b/packages/bob-and-alice/package.json
@@ -23,6 +23,7 @@
     "test:coverage": "cross-env DOTENV_CONFIG_QUIET=true vitest run --coverage"
   },
   "dependencies": {
+    "@tearleads/api-test-utils": "workspace:*",
     "@tearleads/db": "workspace:*",
     "@tearleads/db-test-utils": "workspace:*",
     "@tearleads/local-write-orchestrator": "workspace:*",
