refactor: extract API deps for boundary compliance
Move pool override and Redis subscriber override to
@tearleads/shared, migration runner to @tearleads/db,
and JWT helper to api-test-utils local module. Use
dependency injection in createTestContext so consumers
pass the Express app via factory function, removing
all @tearleads/api imports from api-test-utils.

--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
   "description": "Monorepo for Tearleads application",
   "devDependencies": {
     "@biomejs/biome": "2.4.3",
+    "@tearleads/api": "workspace:*",
     "@commitlint/cli": "20.4.2",
     "@commitlint/config-conventional": "20.4.2",
     "@commitlint/types": "20.4.0",
