fix: add api-test-utils to project refs

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -45,6 +45,7 @@
     { "path": "./packages/cli" },
     { "path": "./packages/db" },
     { "path": "./packages/db/tsconfig.test.json" },
+    { "path": "./packages/api-test-utils" },
     { "path": "./packages/db-test-utils" },
     { "path": "./packages/db-test-utils/tsconfig.test.json" },
     { "path": "./packages/msw" },
