fix(ansible): drop blanket sudo on macOS
Change developerLaptop.yml to become: false and add
per-task become directives in devToolchain.yml.

Linux-only root tasks (apt, systemd, /usr/local) get
explicit become: true. User-space tasks (mise, uv,
Claude Code, terminfo, neovim config) use conditional
become based on toolchain_is_local fact.

Also add mise trust step before node install,
--ask-become-pass to run-developer-laptop.sh, and
extract AI tools into devToolchainAiTools.yml to
stay under the 500-line file limit.

--- a/ansible/playbooks/developerLaptop.yml
+++ b/ansible/playbooks/developerLaptop.yml
@@ -16,7 +16,7 @@
   tasks:
     - name: Install shared developer toolchain
       ansible.builtin.import_tasks: tasks/devToolchain.yml
-      become: true
+      become: false
 
     - name: Configure laptop CLI shell environment
       ansible.builtin.import_tasks: tasks/laptopCliEnvironment.yml
