perf: vitest workspace mode
Enable single-process orchestration across all 45 packages via
Vitest workspace projects. Add shared config with thread pool
and dependency optimization. Fix process.cwd() usage in tests
for workspace compatibility.

--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "devWebsite": "FORCE_COLOR=0 pnpm --filter @tearleads/api buildOpenapi && FORCE_COLOR=0 pnpm --filter @tearleads/website dev",
     "build": "pnpm -r build",
     "enforceTypeScriptIncrementalBuilds": "./scripts/checks/enforceTypeScriptIncrementalBuilds.ts",
-    "test": "pnpm -r test && pnpm test:tuxedo",
+    "test": "cross-env DOTENV_CONFIG_QUIET=true vitest run && pnpm test:tuxedo",
+    "test:sequential": "pnpm -r test && pnpm test:tuxedo",
     "qaVfsSecureUploadTestSuite": "tsx packages/bob-and-alice/src/qa/runVfsSecureUploadQaSuite.ts",
     "qaVfsSecureUploadTestEvidence": "tsx packages/bob-and-alice/src/qa/runVfsSecureUploadQaSuite.ts --continue-on-failure --report-json coverage/qa/vfsSecureUploadQaSuite.json --report-markdown coverage/qa/vfsSecureUploadQaSuite.md",
     "testVfsSecureUploadQaSuite": "pnpm --filter @tearleads/bob-and-alice test -- src/qa/vfsSecureUploadQaSuite.test.ts",
