--- a/packages/smtp-listener/package.json
+++ b/packages/smtp-listener/package.json
@@ -31,6 +31,9 @@
     "smtp-server": "3.18.1"
   },
   "devDependencies": {
+    "@tearleads/api": "workspace:*",
+    "@tearleads/api-test-utils": "workspace:*",
+    "@tearleads/db": "workspace:*",
     "@types/node": "25.3.0",
     "@types/pg": "8.15.6",
     "@types/smtp-server": "3.5.12",
