--- a/packages/analytics/package.json
+++ b/packages/analytics/package.json
@@ -44,7 +44,7 @@
     "@vitejs/plugin-react": "5.1.4",
     "@vitest/coverage-v8": "4.0.18",
     "cross-env": "10.1.0",
-    "jsdom": "28.1.0",
+    "happy-dom": "20.7.0",
     "react": "19.2.4",
     "react-dom": "19.2.4",
     "react-router-dom": "7.13.0",
