--- a/packages/audio/package.json
+++ b/packages/audio/package.json
@@ -45,7 +45,7 @@
     "@types/react-dom": "19.2.3",
     "@vitejs/plugin-react": "5.1.4",
     "@vitest/coverage-v8": "4.0.18",
-    "jsdom": "28.1.0",
+    "happy-dom": "20.7.0",
     "react": "19.2.4",
     "react-dom": "19.2.4",
     "react-i18next": "16.5.4",
