--- a/packages/backups/package.json
+++ b/packages/backups/package.json
@@ -46,7 +46,7 @@
     "@vitejs/plugin-react": "5.1.4",
     "@vitest/coverage-v8": "4.0.18",
     "cross-env": "10.1.0",
-    "jsdom": "28.1.0",
+    "happy-dom": "20.7.0",
     "react": "19.2.4",
     "react-dom": "19.2.4",
     "react-i18next": "16.5.4",
