--- a/packages/chrome-extension/package.json
+++ b/packages/chrome-extension/package.json
@@ -16,7 +16,7 @@
     "@types/node": "25.3.0",
     "@vitest/coverage-v8": "4.0.18",
     "cross-env": "10.1.0",
-    "jsdom": "28.1.0",
+    "happy-dom": "20.7.0",
     "typescript": "5.9.3",
     "vite": "7.3.1",
     "vitest": "4.0.18",
