--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -126,7 +126,7 @@
     "electron-builder": "26.8.1",
     "electron-vite": "5.0.0",
     "jiti": "2.6.1",
-    "jsdom": "28.1.0",
+    "happy-dom": "20.7.0",
     "openapi-types": "12.1.3",
     "rollup-plugin-visualizer": "7.0.0",
     "svgo": "^4.0.0",
