--- a/packages/contacts/package.json
+++ b/packages/contacts/package.json
@@ -53,7 +53,7 @@
     "@vitest/coverage-v8": "4.0.18",
     "drizzle-orm": "0.45.1",
     "i18next": "25.8.12",
-    "jsdom": "28.1.0",
+    "happy-dom": "20.7.0",
     "react": "19.2.4",
     "react-dom": "19.2.4",
     "react-i18next": "16.5.4",
