--- a/packages/health/package.json
+++ b/packages/health/package.json
@@ -53,7 +53,7 @@
     "@vitest/coverage-v8": "4.0.18",
     "cross-env": "10.1.0",
     "drizzle-orm": "0.45.1",
-    "jsdom": "28.1.0",
+    "happy-dom": "20.7.0",
     "react": "19.2.4",
     "react-dom": "19.2.4",
     "react-router-dom": "7.13.0",
