--- a/packages/mls-chat/package.json
+++ b/packages/mls-chat/package.json
@@ -46,7 +46,7 @@
     "@types/react-dom": "19.2.3",
     "@vitejs/plugin-react": "5.1.4",
     "@vitest/coverage-v8": "4.0.18",
-    "jsdom": "28.1.0",
+    "happy-dom": "20.7.0",
     "typescript": "5.9.3",
     "vitest": "4.0.18",
     "vitest-fail-on-console": "0.10.1"
