--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -30,7 +30,7 @@
     "@types/react-dom": "19.2.3",
     "@vitejs/plugin-react": "5.1.4",
     "@vitest/coverage-v8": "4.0.18",
-    "jsdom": "28.1.0",
+    "happy-dom": "20.7.0",
     "tailwindcss": "4.2.0",
     "vite": "7.3.1",
     "vitest": "4.0.18",
