--- a/packages/api-client/package.json
+++ b/packages/api-client/package.json
@@ -23,7 +23,7 @@
     "build": "echo \"@tearleads/api-client is source-consumed via Vite aliases\"",
     "clean": "rm -rf dist",
     "test": "cross-env DOTENV_CONFIG_QUIET=true vitest run",
-    "test:coverage": "cross-env DOTENV_CONFIG_QUIET=true vitest run --coverage"
+    "test:coverage": "cross-env NODE_OPTIONS=--max-old-space-size=8192 DOTENV_CONFIG_QUIET=true vitest run --coverage"
   },
   "dependencies": {
     "@tearleads/local-write-orchestrator": "workspace:*",
