--- a/packages/wallet/package.json
+++ b/packages/wallet/package.json
@@ -22,6 +22,7 @@
     "test:coverage": "cross-env DOTENV_CONFIG_QUIET=true vitest run --coverage"
   },
   "peerDependencies": {
+    "@tearleads/db": "workspace:*",
     "@tearleads/window-manager": "workspace:*",
     "drizzle-orm": "0.45.1",
     "react": "19.2.4",
@@ -33,6 +34,7 @@
     "lucide-react": "0.575.0"
   },
   "devDependencies": {
+    "@tearleads/db": "workspace:*",
     "@tearleads/window-manager": "workspace:*",
     "@testing-library/jest-dom": "6.9.1",
     "@testing-library/react": "16.3.2",
