fix(client): map db sqlite types in tsconfig

--- a/packages/client/tsconfig.json
+++ b/packages/client/tsconfig.json
@@ -36,6 +36,9 @@
       "@tearleads/compliance": ["../compliance/src/index.ts"],
       "@tearleads/contacts/package.json": ["../contacts/package.json"],
       "@tearleads/contacts": ["../contacts/src/index.ts"],
+      "@tearleads/db/package.json": ["../db/package.json"],
+      "@tearleads/db": ["../db/src/index.ts"],
+      "@tearleads/db/sqlite": ["../db/src/generated/sqlite/schema.ts"],
       "@tearleads/email/package.json": ["../email/package.json"],
       "@tearleads/email": ["../email/src/index.ts"],
       "@tearleads/health/package.json": ["../health/package.json"],
