--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -78,6 +78,7 @@
     "@tearleads/ui": "workspace:*",
     "@tearleads/vehicles": "workspace:*",
     "@tearleads/vfs-explorer": "workspace:*",
+    "@tearleads/wallet": "workspace:*",
     "@tearleads/window-manager": "workspace:*",
     "@uiw/react-md-editor": "4.0.11",
     "better-sqlite3-multiple-ciphers": "12.6.2",
