--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -38,22 +38,22 @@
     "electron:test:ui": "pnpm electron:build && playwright test --config=playwright.electron.config.ts --ui"
   },
   "dependencies": {
-    "@assistant-ui/react": "0.12.11",
+    "@assistant-ui/react": "0.12.14",
     "@capacitor-community/sqlite": "8.0.0",
     "@capacitor/app": "8.0.1",
     "@capacitor/core": "8.1.0",
     "@capacitor/filesystem": "8.1.2",
-    "@capacitor/keyboard": "8.0.0",
+    "@capacitor/keyboard": "8.0.1",
     "@capacitor/share": "8.0.1",
     "@capawesome/capacitor-file-picker": "8.0.2",
-    "@capgo/capacitor-native-biometric": "8.4.1",
+    "@capgo/capacitor-native-biometric": "8.4.2",
     "@dnd-kit/core": "6.3.1",
     "@huggingface/transformers": "3.8.1",
-    "@ionic/core": "8.7.17",
+    "@ionic/core": "8.7.18",
     "@noble/hashes": "2.0.1",
     "@radix-ui/react-slot": "1.2.4",
     "@tanstack/react-table": "8.21.3",
-    "@tanstack/react-virtual": "3.13.18",
+    "@tanstack/react-virtual": "3.13.19",
     "@tearleads/ai": "workspace:*",
     "@tearleads/analytics": "workspace:*",
     "@tearleads/api-client": "workspace:*",
@@ -85,22 +85,21 @@
     "class-variance-authority": "0.7.1",
     "drizzle-orm": "0.45.1",
     "file-type": "21.3.0",
-    "i18next": "25.8.12",
+    "i18next": "25.8.13",
     "i18next-browser-languagedetector": "8.2.1",
     "lucide-react": "0.575.0",
     "mermaid": "11.12.3",
     "music-metadata": "11.12.1",
-    "pdfjs-dist": "5.4.296",
+    "pdfjs-dist": "5.4.624",
     "react": "19.2.4",
     "react-dom": "19.2.4",
     "react-i18next": "16.5.4",
-    "react-pdf": "10.3.0",
-    "react-router-dom": "7.13.0",
+    "react-pdf": "10.4.1",
+    "react-router-dom": "7.13.1",
     "recharts": "3.7.0",
     "sonner": "2.0.7"
   },
   "devDependencies": {
-    "@tearleads/api-test-utils": "workspace:*",
     "@capacitor/android": "8.1.0",
     "@capacitor/cli": "8.1.0",
     "@capacitor/ios": "8.1.0",
@@ -108,14 +107,15 @@
     "@electron-toolkit/utils": "4.0.0",
     "@electron/rebuild": "4.0.3",
     "@playwright/test": "1.58.2",
-    "@tailwindcss/vite": "4.2.0",
+    "@tailwindcss/vite": "4.2.1",
+    "@tearleads/api-test-utils": "workspace:*",
     "@tearleads/db-test-utils": "workspace:*",
     "@tearleads/msw": "workspace:*",
     "@testing-library/jest-dom": "6.9.1",
     "@testing-library/react": "16.3.2",
     "@testing-library/user-event": "14.6.1",
     "@types/better-sqlite3": "7.6.13",
-    "@types/node": "25.3.0",
+    "@types/node": "25.3.2",
     "@types/react": "19.2.14",
     "@types/react-dom": "19.2.3",
     "@vitejs/plugin-react": "5.1.4",
@@ -123,15 +123,15 @@
     "@webgpu/types": "0.1.69",
     "cross-env": "10.1.0",
     "drizzle-kit": "0.31.9",
-    "electron": "40.6.0",
+    "electron": "40.6.1",
     "electron-builder": "26.8.1",
     "electron-vite": "5.0.0",
     "jiti": "2.6.1",
     "jsdom": "28.1.0",
     "openapi-types": "12.1.3",
     "rollup-plugin-visualizer": "7.0.0",
-    "svgo": "^4.0.0",
-    "tailwindcss": "4.2.0",
+    "svgo": "4.0.0",
+    "tailwindcss": "4.2.1",
     "tsx": "4.21.0",
     "typescript": "5.9.3",
     "vite": "7.3.1",
