--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "lint:ansible": "ansible-lint ansible/ terraform/stacks/staging/tee/ansible/ terraform/stacks/prod/tee/ansible/",
     "lint:md": "markdownlint-cli2 '**/*.md'",
     "lint:actions": "./scripts/checks/checkGithubActions.sh",
-    "lint:knip": "knip --config knip.ts --use-tsconfig-files",
+    "lint:knip": "knip --config knip.ts --use-tsconfig-files --treat-config-hints-as-errors",
     "lint:knip:fix": "knip -n --config knip.ts --use-tsconfig-files --fix --fix-type dependencies --format",
     "lintPreen": "./scripts/checks/preen/checkPreenEcosystem.ts --strict",
     "checkMswParity": "./scripts/checks/checkMswParity.ts",
