fix(knip): enable classMembers checks

--- a/packages/analytics/tsconfig.json
+++ b/packages/analytics/tsconfig.json
@@ -13,6 +13,7 @@
     "resolveJsonModule": true,
     "baseUrl": ".",
     "paths": {
+      "@/*": ["./src/test/clientCompat/*"],
       "@analytics/*": ["./src/*"]
     },
     "tsBuildInfoFile": "./dist/.tsbuildinfo"
