--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "lint:knip:fix": "knip -n --config knip.ts --use-tsconfig-files --fix --fix-type dependencies --format",
     "lintPreen": "./scripts/checks/preen/checkPreenEcosystem.ts --strict",
     "checkMswParity": "./scripts/checks/checkMswParity.ts",
+    "checkDependencyCruiser": "./scripts/checks/checkDependencyCruiser.sh",
     "checkVfsCrdtCompactionMetrics": "./scripts/checks/checkVfsCrdtCompactionMetrics.ts",
     "format": "biome format --write .",
     "generatePreenDocs": "./scripts/preen/generatePreenDocs.sh",
@@ -73,6 +74,7 @@
     "commander": "14.0.3",
     "concurrently": "9.2.1",
     "cross-env": "10.1.0",
+    "dependency-cruiser": "17.3.8",
     "husky": "9.1.7",
     "knip": "5.85.0",
     "markdownlint-cli2": "0.21.0",
