refactor(depcruise): tighten phase-1 rules

--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -54,9 +54,11 @@
     "@radix-ui/react-slot": "1.2.4",
     "@tanstack/react-table": "8.21.3",
     "@tanstack/react-virtual": "3.13.19",
+    "@tearleads/admin": "workspace:*",
     "@tearleads/ai": "workspace:*",
     "@tearleads/analytics": "workspace:*",
     "@tearleads/api-client": "workspace:*",
+    "@tearleads/app-builder": "workspace:*",
     "@tearleads/audio": "workspace:*",
     "@tearleads/backups": "workspace:*",
     "@tearleads/businesses": "workspace:*",
@@ -67,8 +69,10 @@
     "@tearleads/db": "workspace:*",
     "@tearleads/email": "workspace:*",
     "@tearleads/health": "workspace:*",
+    "@tearleads/keychain": "workspace:*",
     "@tearleads/local-write-orchestrator": "workspace:*",
     "@tearleads/mls-chat": "workspace:*",
+    "@tearleads/notifications": "workspace:*",
     "@tearleads/notes": "workspace:*",
     "@tearleads/remote-read-orchestrator": "workspace:*",
     "@tearleads/search": "workspace:*",
@@ -78,6 +82,7 @@
     "@tearleads/ui": "workspace:*",
     "@tearleads/vehicles": "workspace:*",
     "@tearleads/vfs-explorer": "workspace:*",
+    "@tearleads/vfs-sync": "workspace:*",
     "@tearleads/wallet": "workspace:*",
     "@tearleads/window-manager": "workspace:*",
     "@uiw/react-md-editor": "4.0.11",
