--- a/packages/mls-chat/package.json
+++ b/packages/mls-chat/package.json
@@ -31,8 +31,7 @@
   "author": "",
   "license": "UNLICENSED",
   "peerDependencies": {
-    "react": "19.2.4",
-    "react-dom": "19.2.4"
+    "react": "19.2.4"
   },
   "dependencies": {
     "@tearleads/shared": "workspace:*",
