--- a/packages/vehicles/package.json
+++ b/packages/vehicles/package.json
@@ -16,8 +16,7 @@
     "dist"
   ],
   "peerDependencies": {
-    "react": "19.2.4",
-    "react-dom": "19.2.4"
+    "react": "19.2.4"
   },
   "scripts": {
     "build": "tsc",
