chore(depcruise): tighten phase-3 rules
- add app-builder vite subpath export and switch package vitest configs to consume it
- add depcruise rule for local app-builder vite plugin deep imports
- ratchet no-client-imports from warn to error

--- a/packages/admin/package.json
+++ b/packages/admin/package.json
@@ -38,6 +38,7 @@
     "sonner": "2.0.7"
   },
   "devDependencies": {
+    "@tearleads/app-builder": "workspace:*",
     "@tearleads/ui": "workspace:*",
     "@tearleads/window-manager": "workspace:*",
     "@testing-library/jest-dom": "6.9.1",
