--- a/packages/app-builder/package.json
+++ b/packages/app-builder/package.json
@@ -9,6 +9,10 @@
       "import": "./src/index.ts",
       "types": "./src/index.ts"
     },
+    "./vite": {
+      "import": "./src/vite/createAppConfigPlugin.ts",
+      "types": "./src/vite/createAppConfigPlugin.ts"
+    },
     "./types": {
       "import": "./src/types.ts",
       "types": "./src/types.ts"
