--- a/packages/audio/package.json
+++ b/packages/audio/package.json
@@ -36,6 +36,7 @@
     "tailwind-merge": "3.5.0"
   },
   "devDependencies": {
+    "@tearleads/app-builder": "workspace:*",
     "@tearleads/window-manager": "workspace:*",
     "@testing-library/jest-dom": "6.9.1",
     "@testing-library/react": "16.3.2",
