--- a/packages/help/package.json
+++ b/packages/help/package.json
@@ -34,6 +34,7 @@
     "lucide-react": "0.575.0"
   },
   "devDependencies": {
+    "@tearleads/app-builder": "workspace:*",
     "@tearleads/ui": "workspace:*",
     "@tearleads/window-manager": "workspace:*",
     "@testing-library/jest-dom": "6.9.1",
