--- a/packages/settings/package.json
+++ b/packages/settings/package.json
@@ -34,6 +34,7 @@
     "tailwind-merge": "3.5.0"
   },
   "devDependencies": {
+    "@tearleads/app-builder": "workspace:*",
     "@tearleads/ui": "workspace:*",
     "@testing-library/jest-dom": "6.9.1",
     "@testing-library/react": "16.3.2",
