--- a/packages/vfs-sync/package.json
+++ b/packages/vfs-sync/package.json
@@ -38,6 +38,7 @@
     "lucide-react": "0.575.0"
   },
   "devDependencies": {
+    "@tearleads/app-builder": "workspace:*",
     "@tearleads/window-manager": "workspace:*",
     "@testing-library/jest-dom": "6.9.1",
     "@testing-library/react": "16.3.2",
