--- a/packages/contacts/package.json
+++ b/packages/contacts/package.json
@@ -24,12 +24,10 @@
   "peerDependencies": {
     "@tearleads/db": "workspace:*",
     "@tearleads/shared": "workspace:*",
-    "@tearleads/ui": "workspace:*",
     "@tearleads/window-manager": "workspace:*",
     "drizzle-orm": "0.45.1",
     "react": "19.2.4",
-    "react-dom": "19.2.4",
-    "react-i18next": "16.5.4"
+    "react-dom": "19.2.4"
   },
   "dependencies": {
     "@dnd-kit/core": "6.3.1",
