--- a/packages/photos/package.json
+++ b/packages/photos/package.json
@@ -24,9 +24,7 @@
   "peerDependencies": {
     "@tearleads/window-manager": "workspace:*",
     "react": "19.2.4",
-    "react-dom": "19.2.4",
-    "react-i18next": "16.5.4",
-    "react-router-dom": "7.13.1"
+    "react-dom": "19.2.4"
   },
   "dependencies": {
     "@tanstack/react-virtual": "3.13.19",
