fix(k8s): relax postgres ssl verify in prod

--- a/terraform/stacks/prod/k8s/manifests/configmap.yaml
+++ b/terraform/stacks/prod/k8s/manifests/configmap.yaml
@@ -12,6 +12,7 @@ data:
   POSTGRES_USER: "postgres"
   POSTGRES_DATABASE: "tearleads"
   POSTGRES_SSL: "1"
+  POSTGRES_SSL_REJECT_UNAUTHORIZED: "0"
   REDIS_URL: "redis://redis:6379"
   # VFS Blob Storage (AWS S3)
   VFS_BLOB_STORE_PROVIDER: "s3"
