fix(infra): address review infra feedback

--- a/packages/api/Dockerfile
+++ b/packages/api/Dockerfile
@@ -32,6 +32,8 @@ FROM node:22-slim
 
 WORKDIR /app
 
+RUN apt-get update && apt-get install -y ca-certificates && rm -rf /var/lib/apt/lists/*
+
 # Copy bundled output (server + CLI)
 COPY --from=builder /app/packages/api/dist/server.cjs ./server.cjs
 COPY --from=builder /app/packages/api/dist/apiCli.cjs ./apiCli.cjs
