--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -67,8 +67,7 @@
     "morgan": "1.10.1",
     "nodemailer": "8.0.1",
     "pg": "8.19.0",
-    "redis": "5.11.0",
-    "swagger-jsdoc": "6.2.8"
+    "redis": "5.11.0"
   },
   "devDependencies": {
     "@types/cors": "2.8.19",
@@ -83,6 +82,7 @@
     "@vitest/coverage-v8": "4.0.18",
     "esbuild": "0.27.3",
     "openapi-types": "12.1.3",
+    "swagger-jsdoc": "6.2.8",
     "supertest": "7.2.2",
     "tsx": "4.21.0",
     "typescript": "5.9.3",
