--- a/package.json
+++ b/package.json
@@ -61,6 +61,9 @@
   "author": "",
   "license": "UNLICENSED",
   "description": "Monorepo for Tearleads application",
+  "dependencies": {
+    "@tsconfig/strictest": "2.0.8"
+  },
   "devDependencies": {
     "@biomejs/biome": "2.4.4",
     "@commitlint/cli": "20.4.2",
@@ -68,7 +71,6 @@
     "@commitlint/types": "20.4.0",
     "@octokit/rest": "22.0.1",
     "@tearleads/api": "workspace:*",
-    "@tsconfig/strictest": "2.0.8",
     "@types/node": "25.3.2",
     "@vitest/coverage-v8": "4.0.18",
     "commander": "14.0.3",
