--- a/packages/tee-api/package.json
+++ b/packages/tee-api/package.json
@@ -3,12 +3,12 @@
   "version": "0.0.7",
   "description": "Secure API primitives and reference server for the TEE environment",
   "type": "module",
-  "main": "src/index.ts",
-  "types": "src/index.ts",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "exports": {
     ".": {
-      "types": "./src/index.ts",
-      "import": "./src/index.ts"
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.js"
     },
     "./package.json": "./package.json"
   },
