--- a/packages/local-write-orchestrator/package.json
+++ b/packages/local-write-orchestrator/package.json
@@ -3,17 +3,18 @@
   "version": "0.0.3",
   "description": "Local SQLite write orchestration primitives",
   "type": "module",
-  "main": "src/index.ts",
-  "types": "src/index.ts",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "exports": {
     ".": {
-      "types": "./src/index.ts",
-      "import": "./src/index.ts"
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.js"
     },
     "./package.json": "./package.json"
   },
   "files": [
-    "src"
+    "src",
+    "dist"
   ],
   "scripts": {
     "build": "echo \"@tearleads/local-write-orchestrator is source-consumed via Vite aliases\"",
