--- a/packages/local-write-orchestrator/package.json
+++ b/packages/local-write-orchestrator/package.json
@@ -17,7 +17,7 @@
     "dist"
   ],
   "scripts": {
-    "build": "echo \"@tearleads/local-write-orchestrator is source-consumed via Vite aliases\"",
+    "build": "tsc",
     "clean": "rm -rf dist",
     "test": "cross-env DOTENV_CONFIG_QUIET=true vitest run",
     "test:coverage": "cross-env DOTENV_CONFIG_QUIET=true vitest run --coverage"
