fix(tsconfig): add lwo project refs

--- a/packages/bob-and-alice/tsconfig.json
+++ b/packages/bob-and-alice/tsconfig.json
@@ -11,6 +11,7 @@
     "composite": true,
     "tsBuildInfoFile": "./dist/.tsbuildinfo"
   },
+  "references": [{ "path": "../local-write-orchestrator" }],
   "include": ["src/**/*"],
   "exclude": ["node_modules", "dist", "**/*.test.ts"]
 }
