refactor(depcruise): prune admin compliance waiver
- switch @tearleads/compliance exports to dist entrypoints
- remove admin tsconfig alias to compliance src internals
- add vite/client typing support for compliance package build
- remove stale depcruise allowlist for admin compliance views

--- a/packages/admin/tsconfig.json
+++ b/packages/admin/tsconfig.json
@@ -13,9 +13,7 @@
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"],
-      "@admin/*": ["./src/*"],
-      "@tearleads/compliance": ["../compliance/src/index.ts"],
-      "@tearleads/compliance/package.json": ["../compliance/package.json"]
+      "@admin/*": ["./src/*"]
     },
     "tsBuildInfoFile": "./dist/.tsbuildinfo"
   },
