--- a/packages/compliance/tsconfig.json
+++ b/packages/compliance/tsconfig.json
@@ -8,6 +8,7 @@
     "outDir": "./dist",
     "rootDir": "./src",
     "lib": ["ESNext", "DOM", "DOM.Iterable"],
+    "types": ["vite/client"],
     "jsx": "react-jsx",
     "composite": true,
     "resolveJsonModule": true,
