chore(checks): tighten knip depcruise pass

--- a/package.json
+++ b/package.json
@@ -45,10 +45,13 @@
     "lint:md": "markdownlint-cli2 '**/*.md'",
     "lint:actions": "./scripts/checks/checkGithubActions.sh",
     "lint:knip": "knip --config knip.ts --use-tsconfig-files --treat-config-hints-as-errors",
+    "lintKnipStrict": "knip --config knip.ts --strict --tsConfig tsconfig.json --include dependencies,unlisted,unresolved,binaries,catalog --exclude files,exports,nsExports,types,nsTypes,classMembers,enumMembers,duplicates --reporter compact",
     "lint:knip:fix": "knip -n --config knip.ts --use-tsconfig-files --fix --fix-type dependencies --format",
     "lintPreen": "./scripts/checks/preen/checkPreenEcosystem.ts --strict",
     "checkMswParity": "./scripts/checks/checkMswParity.ts",
     "checkDependencyCruiser": "./scripts/checks/checkDependencyCruiser.sh",
+    "checkDependencyCruiserSummary": "./scripts/checks/checkDependencyCruiser.sh --summary",
+    "checkDependencyCruiserSummaryJson": "./scripts/checks/checkDependencyCruiser.sh --summary-json",
     "checkVfsCrdtCompactionMetrics": "./scripts/checks/checkVfsCrdtCompactionMetrics.ts",
     "format": "biome format --write .",
     "generatePreenDocs": "./scripts/preen/generatePreenDocs.sh",
