--- a/packages/classic/package.json
+++ b/packages/classic/package.json
@@ -28,6 +28,7 @@
   "devDependencies": {
     "@tearleads/app-builder": "workspace:*",
     "@tearleads/db": "workspace:*",
+    "@tearleads/db-test-utils": "workspace:*",
     "@testing-library/jest-dom": "6.9.1",
     "@testing-library/react": "16.3.2",
     "@types/node": "25.3.2",
