feat(scaffolding): share via apiCli
Move scaffolding DB functions into @tearleads/shared/scaffolding,
add create-test-users and setup-bob-notes-share CLI commands,
and create thin k8s wrappers for staging execution.

--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -18,6 +18,10 @@
       "types": "./dist/server/index.d.ts",
       "import": "./dist/server/index.js"
     },
+    "./scaffolding": {
+      "types": "./dist/scaffolding/index.d.ts",
+      "import": "./dist/scaffolding/index.js"
+    },
     "./testing": {
       "types": "./dist/testing/index.d.ts",
       "import": "./dist/testing/index.js"
