--- a/package.json
+++ b/package.json
@@ -46,6 +46,8 @@
     "lint:actions": "./scripts/checks/checkGithubActions.sh",
     "lint:knip": "knip --config knip.ts --use-tsconfig-files --treat-config-hints-as-errors",
     "lintKnipStrict": "knip --config knip.ts --strict --tsConfig tsconfig.json --include dependencies,unlisted,unresolved,binaries,catalog --exclude files,exports,nsExports,types,nsTypes,classMembers,enumMembers,duplicates --reporter compact",
+    "checkKnipStrictSummary": "./scripts/checks/checkKnipStrict.sh",
+    "checkKnipStrictSummaryJson": "./scripts/checks/checkKnipStrict.sh --json",
     "lint:knip:fix": "knip -n --config knip.ts --use-tsconfig-files --fix --fix-type dependencies --format",
     "lintPreen": "./scripts/checks/preen/checkPreenEcosystem.ts --strict",
     "checkMswParity": "./scripts/checks/checkMswParity.ts",
