--- a/packages/settings/package.json
+++ b/packages/settings/package.json
@@ -29,9 +29,7 @@
   },
   "dependencies": {
     "@radix-ui/react-slot": "1.2.4",
-    "class-variance-authority": "0.7.1",
-    "clsx": "2.1.1",
-    "tailwind-merge": "3.5.0"
+    "class-variance-authority": "0.7.1"
   },
   "devDependencies": {
     "@tearleads/app-builder": "workspace:*",
