--- a/packages/vfs-explorer/package.json
+++ b/packages/vfs-explorer/package.json
@@ -23,6 +23,7 @@
   "peerDependencies": {
     "@tearleads/db": "workspace:*",
     "@tearleads/shared": "workspace:*",
+    "@tearleads/ui": "workspace:*",
     "@tearleads/window-manager": "workspace:*",
     "drizzle-orm": "0.45.1",
     "react": "19.2.4",
@@ -31,13 +32,12 @@
   "dependencies": {
     "@dnd-kit/core": "6.3.1",
     "@dnd-kit/modifiers": "9.0.0",
-    "clsx": "2.1.1",
-    "lucide-react": "0.575.0",
-    "tailwind-merge": "3.5.0"
+    "lucide-react": "0.575.0"
   },
   "devDependencies": {
     "@tearleads/db-test-utils": "workspace:*",
     "@tearleads/shared": "workspace:*",
+    "@tearleads/ui": "workspace:*",
     "@testing-library/jest-dom": "6.9.1",
     "@testing-library/react": "16.3.2",
     "@testing-library/user-event": "14.6.1",
