--- a/packages/mls-core/package.json
+++ b/packages/mls-core/package.json
@@ -36,6 +36,7 @@
   "devDependencies": {
     "@vitest/coverage-v8": "4.0.18",
     "cross-env": "10.1.0",
+    "jsdom": "28.1.0",
     "typescript": "5.9.3",
     "vitest": "4.0.18"
   }
