--- a/packages/api/Dockerfile
+++ b/packages/api/Dockerfile
@@ -17,6 +17,7 @@ COPY packages/vfs-sync/package.json packages/vfs-sync/
 RUN pnpm install --frozen-lockfile --ignore-scripts
 
 # Copy source code
+COPY proto proto
 COPY packages/api packages/api
 COPY packages/shared packages/shared
 COPY packages/db packages/db
