--- a/packages/website/Dockerfile
+++ b/packages/website/Dockerfile
@@ -18,6 +18,7 @@ COPY packages/ui/package.json packages/ui/
 RUN pnpm install --frozen-lockfile --ignore-scripts
 
 # Copy source code
+COPY proto proto
 COPY packages/website packages/website
 COPY packages/api packages/api
 COPY packages/shared packages/shared
