--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -55,6 +55,10 @@
   "author": "",
   "license": "UNLICENSED",
   "dependencies": {
+    "@bufbuild/protobuf": "1.10.1",
+    "@connectrpc/connect": "1.7.0",
+    "@connectrpc/connect-express": "1.7.0",
+    "@connectrpc/connect-node": "1.7.0",
     "@aws-sdk/client-s3": "3.1000.0",
     "@tearleads/db": "workspace:*",
     "@tearleads/shared": "workspace:*",
