chore(ci): ignore generated proto in biome
- exclude packages/shared/src/gen from biome checks
- bump biome schema URL to 2.4.4

--- a/biome.json
+++ b/biome.json
@@ -46,6 +46,7 @@
     "includes": [
       "packages/**/src/**/*.{ts,tsx}",
       "scripts/**/*.{ts,tsx}",
+      "!packages/shared/src/gen/**",
       "!**/dist-tests"
     ],
     "ignoreUnknown": true
