--- a/packages/mls-chat/tsconfig.json
+++ b/packages/mls-chat/tsconfig.json
@@ -12,6 +12,7 @@
     "composite": true,
     "tsBuildInfoFile": "./dist/.tsbuildinfo"
   },
+  "references": [{ "path": "../mls-core" }],
   "include": ["src/**/*"],
   "exclude": ["node_modules", "dist", "**/*.test.ts", "**/*.test.tsx"]
 }
