--- a/biome.json
+++ b/biome.json
@@ -46,7 +46,7 @@
     "includes": [
       "packages/**/src/**/*.{ts,tsx}",
       "scripts/**/*.{ts,tsx}",
-      "!packages/shared/src/gen/**",
+      "!packages/shared/src/gen",
       "!**/dist-tests"
     ],
     "ignoreUnknown": true
