--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -268,6 +268,9 @@ jobs:
       - name: Check dependency graph constraints
         run: ./scripts/checks/checkDependencyCruiser.sh
 
+      - name: Check architecture guardrail budgets
+        run: ./scripts/checks/checkArchitectureGuardrailBudgets.ts
+
       - name: Cache SQLite WASM
         uses: actions/cache@v4
         with:
